<resources>
    <string name="app_name">Gran Centre</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Text de hotels de 2 estrellas -->
    <string name="hotel2Estrellasnom1"><![CDATA[B&B Hotel Barcelona Granollers]]></string>
    <string name="hotel2Estrellasadreça1">c/ Valldoriolf, 1, Granollers 08520, Barcelona (España)</string>
    <string name="hotel2EstrellasTelefon1">Telefon: 938 407 132</string>
    <string name="hotel2Estrellasnom2"><![CDATA[Hotel H]]></string>
    <string name="hotel2Estrellasadreça2">Carretera del Masnou km 14, Granollers 08400, Barcelona (España)</string>
    <string name="hotel2EstrellasTelefon2">Telefon: 938 60 66 88</string>
    <string name="hotel2Estrellasnom3"><![CDATA[Hotel Ibis]]></string>
    <string name="hotel2Estrellasadreça3">C. CAN GORDI 1, POL. IND. CAN CATALA, POLIGONO INDUSTRIAL GRANOLLERS, Granollers 8400, Barcelona (España)</string>
    <string name="hotel2EstrellasTelefon3">Telefon: 935 68 90 60</string>
    <!-- Text de hotels de 3 estrellas -->
    <string name="hotel3Estrellasnom1"><![CDATA[Hotel Casa Fonda Europa]]></string>
    <string name="hotel3Estrellasadreça1">Anselm Clave, 1, Granollers 08402, Barcelona (España)</string>
    <string name="hotel3EstrellasTelefon1">Telefon: 938 70 03 12</string>
    <string name="hotel3Estrellasnom2"><![CDATA[Hotel Granollers ]]></string>
    <string name="hotel3Estrellasadreça2">AV. FRANCESC MACIA, 300, Granollers 08401, Barcelona (España)</string>
    <string name="hotel3EstrellasTelefon2">Telefon: 938 79 51 00</string>
    <string name="hotel3Estrellasnom3"><![CDATA[Hotel Holiday Inn Express]]></string>
    <string name="hotel3Estrellasadreça3">Cami de can gordi 15, Granollers 08400, Barcelona (España)</string>
    <string name="hotel3EstrellasTelefon3">Telefon: 937 01 70 00</string>
    <!-- Text de hotels de 4 estrellas -->
    <string name="hotel4Estrellasnom1"><![CDATA[Hotel Ciutat Granollers]]></string>
    <string name="hotel4Estrellasadreça1">Turó Bruguet, 2, Granollers 08402, Barcelona (España)</string>
    <string name="hotel4EstrellasTelefon1">Telefon: 938 79 62 20</string>
    <string name="hotel4Estrellasnom2"><![CDATA[Hotel Augusta Barcelona Valles]]></string>
    <string name="hotel4Estrellasadreça2">Autopista AP 7 Salida 13 BP5002 Km 12 5, Granollers 08410, Barcelona (España)</string>
    <string name="hotel4EstrellasTelefon2">Telefon: 938 45 60 50</string>
    <!-- Text de restaurant italia -->
    <string name="restaurantItaliaNom1">La Mezza Luna</string>
    <string name="restaurantItaliaAdreça1">Carrer de Foment, 2, 08402 Granollers, Barcelona</string>
    <string name="restaurantItaliaTelefon1">Telefon: 938 79 52 23</string>
    <string name="restaurantItaliaNom2">La Tagliatella</string>
    <string name="restaurantItaliaAdreça2">Carrer de Joan Prim, 42, 08400 Granollers, Barcelona</string>
    <string name="restaurantItaliaTelefon2">Telefon: 938 60 48 99</string>
    <string name="restaurantItaliaNom3">Il Sapore Italiano</string>
    <string name="restaurantItaliaAdreça3">Carrer de Ponent, 41, 08401 Granollers, Barcelona</string>
    <string name="restaurantItaliaTelefon3">Telefon: 938 40 15 32</string>
    <!-- Text de restaurant de marisc -->
    <string name="restaurantMariscNom1">La Piranya</string>
    <string name="restaurantMariscAdreça1">Francesc Macia, 300, 08401, Granollers, Barcelona</string>
    <string name="restaurantMariscTelefon1">Telefon: 938 79 51 00</string>
    <string name="restaurantMariscNom2">Os Galegos</string>
    <string name="restaurantMariscAdreça2">Travessia del Lledoner, 9,  08402 Granollers, Barcelona</string>
    <string name="restaurantMariscTelefon2">Telefon: 938 40 30 39</string>
    <string name="restaurantMariscNom3">Can Pipa</string>
    <string name="restaurantMariscAdreça3">Carrer Aureli Font, 5, 08401 Granollers, Barcelona</string>
    <string name="restaurantMariscTelefon3">Telefon: 938 79 47 69</string>
    <!-- Text de restaurant vegetaria -->
    <string name="restaurantVegetariaNom1">Vinyam</string>
    <string name="restaurantVegetariaAdreça1">Carrer Princesa 3,  08401 Granollers, Barcelona</string>
    <string name="restaurantVegetariaTelefon1">Telefon: 930 23 28 99</string>
    <string name="restaurantVegetariaNom2">Ànima de Granollers</string>
    <string name="restaurantVegetariaAdreça2">C/ Girona, 4, 08401 Granollers, Barcelona</string>
    <string name="restaurantVegetariaTelefon2">Telefon: 938 70 42 91</string>
    <string name="restaurantVegetariaNom3">Denominació d\'Origen</string>
    <string name="restaurantVegetariaAdreça3">Passeig de la Muntanya, nº2, 08402 Granollers, Barcelona</string>
    <string name="restaurantVegetariaTelefon3">Telefon: 938 41 85 80</string>
    <!-- Text de parkings -->
    <string name="parkingNom1">Pàrquing Teatre Auditori</string>
    <string name="parkingAdreça1">Carrer de Ponent, 41, 08401 Granollers, Barcelona</string>
    <string name="parkingPlaces1">Places disponibles: 30 | Places totals: 300</string>
    <string name="parkingNom2">Pàrquing Escolapi Blau</string>
    <string name="parkingAdreça2">Carrer Francisco de Quevedo, 08402 Granollers, Barcelona</string>
    <string name="parkingPlaces2">Places disponibles: 2 | Places totals: 80</string>
    <string name="parkingNom3">Pàrquing Corona</string>
    <string name="parkingAdreça3">Carrer Sant Josep de Calassanç, 16, 08402 Granollers, Barcelona</string>
    <string name="parkingPlaces3">Places disponibles: 0 | Places totals: 100</string>
    <string name="parkingNom4">Pàrquing Estació-Atenea</string>
    <string name="parkingAdreça4">Passeig Cristòfol Colom, 21, 08402 Granollers, Barcelona</string>
    <string name="parkingPlaces4">Places disponibles: 90 | Places totals: 200</string>
    <!-- Text de pelicules -->
    <string name="peliculaTitol1">TENET</string>
    <string name="peliculaDescripcio1">Armat amb només una paraula -Tenet- el protagonista d\'aquesta història ha de lluitar per la supervivència de tot el món en una missió que el porta a viatjar a través de el fosc món de l\'espionatge internacional, i l\'experiència es desdoblarà més enllà de el temps lineal.</string>
    <string name="peliculaTitol2">El cavaller del drac</string>
    <string name="peliculaDescripcio2">Amagat als afores de Londres, Firedrake és un jove drac platejat que està cansat d\'amagar-se en el bosc i està disposat a mostrar-li a la nova generació el que és un veritable drac. Quan els humans estan a punt de destruir l\'últim refugi de la seva família, Firedrake emprèn una aventura en secret amb la seva amiga Pell de Sofre per a buscar "La Riba del Cel", les llegendes expliquen que és el santuari dels dracs. </string>
    <string name="peliculaTitol3">La vampira de Barcelona</string>
    <string name="peliculaDescripcio3">A la Barcelona de principis de segle XX conviuen dues ciutats: un burgesa i modernista, l\'altra sòrdida i bruta. La desaparició de la petita Teresa Guitart, filla d\'una rica família, commociona el país i la policia té aviat una sospitosa: Enriqueta Martí, coneguda com La Vampira de Raval.  </string>

    <string name="trucar">Trucar</string>
    <string name="pagina_web">Pagina web</string>

</resources>