<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityCartellera">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Media -->
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="194dp"
                        android:src="@drawable/peliculasimagte1"
                        android:scaleType="centerCrop"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <!-- Title, secondary and supporting text -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/peliculaTitol1"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/peliculaDescripcio1"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary"
                            />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Media -->
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="194dp"
                        android:src="@drawable/peliculasimagte2"
                        android:scaleType="centerCrop"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <!-- Title, secondary and supporting text -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/peliculaTitol2"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/peliculaDescripcio2"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary"
                            />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Media -->
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="194dp"
                        android:src="@drawable/peliculasimagte3"
                        android:scaleType="centerCrop"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <!-- Title, secondary and supporting text -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/peliculaTitol3"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/peliculaDescripcio3"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary"
                            />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>