<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentsHotel.Hotel4">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Media -->
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="194dp"
                        android:src="@drawable/hotel4imatge1"
                        android:scaleType="centerCrop"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <!-- Title, secondary and supporting text -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hotel4Estrellasnom1"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/hotel4Estrellasadreça1"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/hotel4EstrellasTelefon1"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary"
                            />

                    </LinearLayout>

                    <!-- Buttons -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginEnd="8dp"
                            android:text="@string/trucar"
                            android:id="@+id/telefonHotel4Estrellas_1"
                            style="?attr/borderlessButtonStyle"
                            />
                        <com.google.android.material.button.MaterialButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/pagina_web"
                            android:id="@+id/websiteHotel4Estrellas_1"
                            style="?attr/borderlessButtonStyle"

                            />

                    </LinearLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <RatingBar
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleX="0.5"
                            android:scaleY="0.5"
                            android:saveEnabled="true"
                            android:numStars="5"
                            android:layout_centerInParent="true"
                            android:id="@+id/ratingBarHotel4Estrellas_1"
                            >
                        </RatingBar>
                    </RelativeLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Media -->
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="194dp"
                        android:src="@drawable/hotel4imatge2"
                        android:scaleType="centerCrop"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <!-- Title, secondary and supporting text -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hotel4Estrellasnom2"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/hotel4Estrellasadreça2"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/hotel4EstrellasTelefon2"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary"
                            />
                    </LinearLayout>
                    <!-- Buttons -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginEnd="8dp"
                            android:text="@string/trucar"
                            android:id="@+id/telefonHotel4Estrellas_2"
                            style="?attr/borderlessButtonStyle"
                            />
                        <com.google.android.material.button.MaterialButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/pagina_web"
                            android:id="@+id/websiteHotel4Estrellas_2"
                            style="?attr/borderlessButtonStyle"
                            />
                    </LinearLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <RatingBar
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleX="0.5"
                            android:scaleY="0.5"
                            android:saveEnabled="true"
                            android:numStars="5"
                            android:layout_centerInParent="true"
                            android:id="@+id/ratingBarHotel4Estrellas_2"
                            >
                        </RatingBar>
                    </RelativeLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <!-- TODO: No he fet tres hotels de 4 estrellas perque a granollers nome hi ha 2 hotels de 4 estrellas. -->
        </LinearLayout>
    </ScrollView>

</FrameLayout>